deployment/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  tls:
    - hosts:
        - argocd.squishmeist.com
      secretName: argocd-server-tls
  rules:
    - host: argocd.squishmeist.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
